Bug 1268501 - Release the GC lock periodically when releasing arenas on the backgound thread r=terrence

--HG--
extra : rebase_source : e9c82e659f14d42a343bb8bb3860ee6ce25de9df